--- a/src/main/java/pkgPresentacion/FrmLogin.form
+++ b/src/main/java/pkgPresentacion/FrmLogin.form
@@ -60,9 +60,9 @@
                               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="txtClave" min="-2" pref="90" max="-2" attributes="0"/>
-                              <Component id="txtUsuario" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="txtClave" pref="90" max="32767" attributes="0"/>
+                              <Component id="txtUsuario" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
                       </Group>
@@ -159,14 +159,8 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtUsuario">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Ingrese Usuario"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtClave">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Ingrese clave"/>
-          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnIngresar1">
           <Properties>
